--- a/dotfiles/.config/i3/config
+++ b/dotfiles/.config/i3/config
@@ -83,7 +83,7 @@ bindsym $mod+Shift+0 move container to workspace 10
 bindsym $mod+Shift+r restart
 
 # Lock screen
-bindsym $mod+p i3lock-fancy
+bindsym $mod+p exec i3lock-fancy
 
 # Resize window (you can also use the mouse for that)
 mode "resize" {
