--- a/dotfiles/Applications/docker-compose.yml
+++ b/dotfiles/Applications/docker-compose.yml
@@ -1,9 +1,17 @@
 version: '3'
 
 services:
-    mongodb:
-        image: mongo:$MONGO_VERSION
-        volumes:
-            - ./mongodb:/data/db
-        ports:
-            - 27017:27017
+  mongodb:
+    image: mongo:$MONGO_VERSION
+    volumes:
+      - ./mongodb:/data/db
+    ports:
+      - 27017:27017
+  mysql:
+    image: mysql:$MYSQL_VERSION
+    environment:
+      MYSQL_ROOT_PASSWORD: $MYSQL_ROOT_PASSWORD
+    volumes:
+      - ./mysql:/var/lib/mysql
+    ports:
+      - 3306:3306
