Add an http nginx container

--- a/dotfiles/Applications/.env
+++ b/dotfiles/Applications/.env
@@ -1,5 +1,11 @@
 
-MONGO_VERSION=3.5
+MONGO_VERSION=latest
+MONGO_PORT=27017
 
-MYSQL_VERSION=5.7
+MYSQL_VERSION=latest
+MYSQL_PORT=3306
 MYSQL_ROOT_PASSWORD=root
+
+WWW_NGINX_VERSION=latest
+WWW_PORT=80
+WWW_ROOT=/srv/http
